<resources>
    <string name="app_name">KOMusic</string>
    <string name="lyrics">LYRICS</string>
    <string name="_1_37">1:37</string>
    <string name="_3_37">3:37</string>
    <string name="the_album">The Album</string>
    <string name="blackpink">BLACKPINK</string>
    <string name="now_playing">now playing</string>
    <string name="play">PLAY</string>
    <string name="shuffle">shuffle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>