<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Player">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/now_playing"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_screen"
            android:layout_width="23dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"
            android:rotation="-90"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
            app:layout_constraintBottom_toBottomOf="@id/txt_now_playing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_now_playing" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_song"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_now_playing"
            app:riv_corner_radius="125dp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/the_album"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintTop_toBottomOf="@+id/img_song"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blackpink"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/player_background">

        <TextView
            android:id="@+id/txt_lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/lyrics"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/img_lyrics"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
            app:layout_constraintBottom_toTopOf="@+id/txt_lyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="#533473" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_play"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_pause"
            android:tint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/next_previous_button"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_prev"
            android:tint="#533473"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintStart_toEndOf="@+id/btn_shuffle" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/next_previous_button"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_next"
            android:tint="#533473"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintEnd_toStartOf="@+id/btn_repeat" />

        <ImageButton
            android:id="@+id/btn_shuffle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_shuffle"
            android:tint="#533473"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

        <ImageButton
            android:id="@+id/btn_repeat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_repeat"
            android:tint="#533473"
            app:layout_constraintBottom_toTopOf="@+id/img_lyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

        <TextView
            android:id="@+id/player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_00_00"
            android:textColor="#533473"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/seek_bar"
            app:layout_constraintStart_toStartOf="@id/seek_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_3_37"
            android:textColor="@color/colorStroke"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/seek_bar"
            app:layout_constraintEnd_toEndOf="@id/seek_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:progress="0"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            tools:layout_editor_absoluteX="-60dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>